--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,20 @@ html {
 }
 .App {
   font-size: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .productList {
   display: flex;
+  max-width: 700px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0px 3px;
 }
 .product {
-  width: 60%;
+  width: 100%;
   padding: 1rem 2rem;
   margin: 1rem;
   display: flex;
@@ -19,4 +24,11 @@ html {
   align-items: center;
   border: 2px solid #e1e1e1;
   border-radius: 8px;
+}
+.btn {
+  border: 2px solid #e1e1e1;
+  cursor: pointer;
+  border-radius: 8px;
+  font-size: 2rem;
+  padding: 1px 2px;
 }
