--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@ html {
   align-items: center;
 }
 .productList {
+  width: 100%;
   display: flex;
-  max-width: 700px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -17,6 +17,7 @@ html {
 }
 .product {
   width: 100%;
+  max-width: 700px;
   padding: 1rem 2rem;
   margin: 1rem;
   display: flex;
@@ -31,4 +32,15 @@ html {
   border-radius: 8px;
   font-size: 2rem;
   padding: 1px 2px;
+}
+.quantity {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: rgba(0, 0, 255, 0.705);
+  border-radius: 50%;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
