--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,8 @@ html {
   justify-content: center;
   align-items: center;
 }
+.Filter {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
